- Technology Advisor
	Great Person Bulbed Techs are reset when a game is started or loaded
- Religion Advisor
	Shows new religions and types of religious buildings/units from mods
	Top area not yet scrollable


MODDING

New Features:

- ReligionUtil
	Makes adding religions and new types of religious buildings/units to the Religion Advisor a snap

Improvements:

Bug Fixes:


____________________________________________________________________________________________________
BUG 4.0 released August 16, 2009

CHANGES

	*** BULL: The BUG DLL ***
	
	This is an optional component that, once installed, enables the features listed below marked [BULL].
	Any features that don't require BUG are not listed here. Refer to BULL's changelog for more information.

New Features:

- Regenerate map shortcut (ALT + G) [BULL]
- MapFinder from HOF Mod: ALT + CTRL + G to start/stop [BULL]
- Advanced Scoreboard
	Refuses to Talk (F) [BULL]
	Number of Cities (Q)
- Production Decay [BULL]
	A yellow ! means an item in the build queue will start to decay after 5 turns of non-production
	A red !! means an item will decay this turn
	Hover for units/buildings shows actual decay amount and turns until it starts 
- Info Screen (F9)
	New expanded Wonders tab by DanF5771
		Shows constructed items (all known rivals)
		Shows items being built (must have enough EPs for City Visibility)
		Zoom to City button
	Remembers the selected tab like other screens
- BUG Religious Advisor (F7) shows which buildings have been or are being built for the state religion 
- AutoSave: automatically save single-player games at start, end, and exit [BULL]
	You must use ESC : Exit to Main Menu or Desktop; ALT + F4 won't save

Improvements:

- BUG and BULL versions are displayed when hovering over your flag [BULL]
- Min/Max Commerce Rate buttons have more accurate hover text [BULL]
- City Screen
	Added hover details for food rate [BULL]
- Foreign Advisor
	ACTIVE: Added number of turns until you can cancel each deal